welcome.lessons.welcome.array.search.AverageValue.scala.error
averageValue:6: error: Int does not take parameters
  return somme/nums.length()
                          ^